chore: custom domain

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: read.sbczk.com
-site_url: https://tomsobpl.github.io
+site_name: readme.sbczk.com
+site_url: https://readme.sbczk.com
 
 theme:
   name: material
